# openarm_description

./: .gitignore  CMakeLists.txt  README.md  openarm_v20_bimanual_sysid.urdf  output.urdf  package.xml  pyproject.toml
.github/workflows/: release.yaml
assets/: __init__.py
assets/end_effector/parallel_link/config/: inertials.yaml  joint_limits.yaml  kinematics.yaml  kinematics_link.yaml
assets/end_effector/parallel_link/urdf/: parallel_link_standalone.urdf.xacro
assets/end_effector/pinch_gripper/config/inertials/: identified.yaml  identified_lin_fric.yaml  identified_long_train.yaml  identified_low_com.yaml  nominal.yaml
assets/end_effector/pinch_gripper/config/joint/: joint_axes.yaml  joint_limits.yaml  joint_mimics.yaml  joint_origins.yaml
assets/end_effector/pinch_gripper/config/link/: collisions.yaml  visuals.yaml
assets/end_effector/pinch_gripper/config/old/: inertials.yaml  joint_limits.yaml  kinematics.yaml  kinematics_link.yaml
assets/end_effector/pinch_gripper/config/struct/: name_mapping.yaml  reference_points.yaml  topology.yaml
assets/end_effector/pinch_gripper/urdf/: pinch_gripper_standalone.urdf.xacro
assets/robot/openarm_v1.0/urdf/: openarm_v10.urdf.xacro
assets/robot/openarm_v2.0/config/: meta.md
assets/robot/openarm_v2.0/urdf/: openarm_v20.urdf.xacro
assets/sensor/zed/urdf_wrapper/: openarm_zed_wrapper.xacro
config/arm/v10/: control_gains.yaml
launch/: display_openarm.launch.py
rviz/: arm_only.rviz  bimanual.rviz
urdf/: generate_v20_urdfs.sh
urdf/ros2_control/: openarm.bimanual.ros2_control.xacro  openarm.ros2_control.xacro
(+71 files in other folders)
