# Copyright 2026 Enactic, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openarm_description"
version = "0.1.0"
authors = [{name = "Enactic, Inc."}]
description = "URDF and Assets for OpenArm"
license = {text = "Apache-2.0"}
maintainers = [{name = "Enactic, Inc."}]
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["assets"]

[tool.setuptools.package-data]
"assets" = ["**/*"]
